--- a/tallerangularmaterial/src/app/app.component.html
+++ b/tallerangularmaterial/src/app/app.component.html
@@ -1,2 +1,7 @@
-<button mat-raised-button color="primary">Primary</button>
+<!--<button mat-raised-button color="primary">Primary</button>-->
 
+<mat-drawer-container class="example-container" [hasBackdrop]="true">    
+  <mat-drawer #drawer [mode]="side">I'm a drawer</mat-drawer>    <mat-drawer-content>
+  <button mat-raised-button (click)="drawer.toggle()">Toggle drawer</button>    
+  </mat-drawer-content></mat-drawer-container>
+  
