--- a/tallerangularmaterial/src/app/app.component.css
+++ b/tallerangularmaterial/src/app/app.component.css
@@ -1,2 +1,9 @@
 .example-container {    height: 100vh;}
 
+.example-icon {    
+    padding: 0 14px;
+}
+.example-spacer 
+{    
+    flex: 1 1 auto; 
+}
