--- a/tallerangularmaterial/src/app/components/principal/principal.component.html
+++ b/tallerangularmaterial/src/app/components/principal/principal.component.html
@@ -38,41 +38,42 @@
         </div>
     </div>
     <div class="row mt-3">
-        <div class="col-8">
+        <div class="col-7">
             <mat-card class="example-card">
                 <mat-card-content>
-                        <h3>
-                                <mat-icon>layers</mat-icon>
-                                Lista de Notas</h3>
-                            <mat-form-field>
-                                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar...">
-                            </mat-form-field>
-                            
-                            <div class="mat-elevation-z8">
-                                <table mat-table [dataSource]="dataSource" matSort>
-                            
-                                    <ng-container matColumnDef="Id">
-                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                                        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-                                    </ng-container>
-                            
-                                    <ng-container matColumnDef="Nota">
-                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-                                        <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
-                                    </ng-container>
-                            
-                                    <ng-container matColumnDef="Nombre">
-                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                                        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-                                    </ng-container>
-                            
-                                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                                    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-                                    </tr>
-                                </table>
-                            
-                                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-                            </div>
+                    <h3>
+                        <mat-icon>layers</mat-icon>
+                        Lista de Notas
+                    </h3>
+                    <mat-form-field>
+                        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar...">
+                    </mat-form-field>
+
+                    <div class="mat-elevation-z8">
+                        <table mat-table [dataSource]="dataSource" matSort>
+
+                            <ng-container matColumnDef="Id">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                                <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Nota">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
+                                <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Nombre">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                                <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+                            </ng-container>
+
+                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+                            </tr>
+                        </table>
+
+                        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+                    </div>
                 </mat-card-content>
             </mat-card>
         </div>
@@ -81,7 +82,17 @@
             <div class="row ">
                 <div class="col-12">
                     <mat-card class="example-card">
-                        <img mat-card-image src="assets/graph2.png" alt="Photo of a Shiba Inu">
+                        <mat-card-content>
+                            <div class="row">
+                                <h4 class="ml-4">Salarios Programación</h4>
+                                <ngx-charts-area-chart [view]="view" [scheme]="colorScheme" [results]="multi"
+                                    [gradient]="gradient" [xAxis]="showXAxis" [yAxis]="showYAxis" [legend]="showLegend"
+                                    [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
+                                    [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel" [autoScale]="autoScale"
+                                    (select)="onSelect($event)">
+                                </ngx-charts-area-chart>
+                            </div>
+                        </mat-card-content>
                     </mat-card>
                 </div>
                 <div class="col-12 mt-3">
